# synapse-agent

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  MEMORY.md  README.md  fibonacci.py  missing_cap.md  pyproject.toml  step.md  synapse.cmd  test_markdown_render.py
docs/: codex-session-discovery-phase-1.md  codex-session-import-phase-2.md  design.md  tui-cursor-refactor.md
examples/: mcp.example.json  models.example.json  settings.example.json
scripts/: _add_chrome_tests.py  _add_subagent_tests.py  _fix_live_md.py  _fix_tui_tail.py  _patch_final_text.py  _patch_live_md.py  _patch_live_newline.py  _patch_live_newline2.py  _patch_stream_printer.py  _patch_subagent_stream.py  _patch_subagent_tui.py  _patch_tool_group_block.py  _patch_tui_chrome.py  _patch_tui_stream_hang.py  install.ps1  probe_assistant_messages.py  probe_iter_events.py  probe_stream_deep.py  probe_stream_events.py  profile_startup.py  profile_startup_deferred.py  profile_startup_detail.py  release.ps1
tests/: test_agent_factory.py  test_async_checkpointer.py  test_backends.py  test_bottombar_registry.py  test_cancel_repair.py  test_capabilities.py  test_checkpoint_seed.py  test_cli.py  test_cli_codex_import.py  test_codex_history.py  test_codex_import.py  test_codex_sessions.py  test_codex_sessions_windows.py  test_config.py  test_context_compact.py  test_context_window.py  test_dialogs.py  test_git_chrome.py  test_git_explore.py  test_http_clients.py  test_input_history.py  test_iteration_abc.py  test_layered_config.py  test_mcp_schema.py  test_mermaid_render.py  test_middleware_async.py  (+27 more)
(+94 files in other folders)
