[project]
name = "synapse"
version = "0.1.3"
description = "Local coding agent built on LangChain Deep Agents (LocalShell, no sandbox)"
readme = "README.md"
authors = [
    { name = "alex8224", email = "alex8224@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "deepagents>=0.6.12",
    "langchain>=1.3.14",
    "langchain-anthropic>=1.4.8",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "mcp>=1.28.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "termaid>=0.7.1",
    "texicode>=1.0.3",
    "textual>=1.0.0",
    "textual-diff-view>=0.1.5",
    "typer>=0.27.0",
    "zstandard>=0.23.0",
]

[project.scripts]
synapse = "synapse.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synapse"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = ["fixtures", ".*", "build", "dist"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]